--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
     <div class="section">
         <h2>All Type Neon Lights Available</h2>
         <div class="image-container">
-            <div class="box"><img src="1.jpg" width="100%"></div>
+            <div class="box"><img src="1.jpeg" width="70%"></div>
             <div class="box"><img src="4.jpeg" width="100%"></div>
-            <div class="box"><img src="3.jpeg" width="100%"></div>
+            <div class="box"><img src="3.jpeg" width="70%"></div>
         </div>
     </div>
     <div class="section">
         
         <div class="image-container">
             <div class="box"><img src="5.jpeg" width="100%"></div>
-            <div class="box"><img src="2.jpg" width="100%"></div>
+            <div class="box"><img src="2.jpeg" width="80%" height="100%"></div>
             <div class="box"><img src="6.jpg" width="100%"></div>
         </div>
     </div>
